--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,187 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@using MoviePro.ViewModels
+@model LandingPageVM
+
+@{
+    ViewData["Title"] = "Movie Pro";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<style>
+    .clampOverview {
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+    }
+
+    .clampTitle {
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+    }
+
+    h5.card-title {
+        height: 2.5em;
+    }
+</style>
+
+
+<section class="px-4">
+    <div class="row">
+        <span class="btn btn-lg btn-danger">UPCOMING</span>
+    </div>
+    <div class="row">
+        <div class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                @{
+                    var classText = "active";
+                    for (var slide = 0; slide < 3; slide++)
+                    {
+            
+        
+                        <div class="carousel-item @classText">
+                            <div class="row">
+                                @foreach (var movie in Model.UpComing.results.Skip(slide * 4).Take(4))
+                                {
+                                    <div class="col-sm-3 mb-2">
+                                        <div class="card" style="width: 18rem;">
+                                            <img src="@movie.poster_path" class="card-img-top" alt="movie poster">
+                                            <div class="card-body">
+                                                <h5 class="card-title clampTitle">@movie.title</h5>
+                                                <p class="card-text clampOverview">@movie.overview</p>
+                                                <div class="d-grid gap-2">
+                                                    <a asp-action="Details" asp-controller="Movies" asp-route-id="@movie.id" class="btn btn-lg btn-danger ">Details</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                }
+                            </div>
+                        </div>
+                        classText = "";
+                    }
+                }
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="px-4">
+    <div class="row">
+        <span class="btn btn-lg btn-danger">NOW PLAYING</span>
+    </div>
+    <div class="row">
+        <div class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                @{
+                    classText = "active";
+                    for (var slide = 0; slide < 3; slide++)
+                    {
+            
+        
+                        <div class="carousel-item @classText">
+                            <div class="row">
+                                @foreach (var movie in Model.NowPlaying.results.Skip(slide * 4).Take(4))
+                                {
+                                    <div class="col-sm-3 mb-2">
+                                        <div class="card" style="width: 18rem;">
+                                            <img src="@movie.poster_path" class="card-img-top" alt="movie poster">
+                                            <div class="card-body">
+                                                <h5 class="card-title clampTitle">@movie.title</h5>
+                                                <p class="card-text clampOverview">@movie.overview</p>
+                                                <div class="d-grid gap-2">
+                                                    <a asp-action="Details" asp-controller="Movies" asp-route-id="@movie.id" class="btn btn-lg btn-danger ">Details</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                }
+                            </div>
+                        </div>
+                        classText = "";
+                    }
+                }
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="px-4">
+    <div class="row">
+        <span class="btn btn-lg btn-danger">POPULAR</span>
+    </div>
+    <div class="row">
+        <div class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                @{
+                    classText = "active";
+                    for (var slide = 0; slide < 3; slide++)
+                    {
+            
+        
+                        <div class="carousel-item @classText">
+                            <div class="row">
+                                @foreach (var movie in Model.Popular.results.Skip(slide * 4).Take(4))
+                                {
+                                    <div class="col-sm-3 mb-2">
+                                        <div class="card" style="width: 18rem;">
+                                            <img src="@movie.poster_path" class="card-img-top" alt="movie poster">
+                                            <div class="card-body">
+                                                <h5 class="card-title clampTitle">@movie.title</h5>
+                                                <p class="card-text clampOverview">@movie.overview</p>
+                                                <div class="d-grid gap-2">
+                                                    <a asp-action="Details" asp-controller="Movies" asp-route-id="@movie.id" class="btn btn-lg btn-danger ">Details</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                }
+                            </div>
+                        </div>
+                        classText = "";
+                    }
+                }
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="px-4">
+    <div class="row">
+        <span class="btn btn-lg btn-danger">TOP RATED</span>
+    </div>
+    <div class="row">
+        <div class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                @{
+                    classText = "active";
+                    for (var slide = 0; slide < 3; slide++)
+                    {
+            
+        
+                        <div class="carousel-item @classText">
+                            <div class="row">
+                                @foreach (var movie in Model.TopRated.results.Skip(slide * 4).Take(4))
+                                {
+                                    <div class="col-sm-3 mb-2">
+                                        <div class="card" style="width: 18rem;">
+                                            <img src="@movie.poster_path" class="card-img-top" alt="movie poster">
+                                            <div class="card-body">
+                                                <h5 class="card-title clampTitle">@movie.title</h5>
+                                                <p class="card-text clampOverview">@movie.overview</p>
+                                                <div class="d-grid gap-2">
+                                                    <a asp-action="Details" asp-controller="Movies" asp-route-id="@movie.id" class="btn btn-lg btn-danger ">Details</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                }
+                            </div>
+                        </div>
+                        classText = "";
+                    }
+                }
+            </div>
+        </div>
+    </div>
+</section>
