Fixed minor UI issues

--- a/Views/Movies/Details.cshtml
+++ b/Views/Movies/Details.cshtml
@@ -6,7 +6,7 @@
 
 <div class="row mx-5">
     <div class="col-sm-12 col-md-6">
-        <div class="row">
+        <div class="row text-white">
             <img src="@ImageService.DecodeImage(Model.Poster, Model.PosterType)" class="w-100" alt="...">
         </div>
 
@@ -35,7 +35,7 @@
 
         <div class="row">
             <div class="col h5">
-                <span class="fw-bold me-2">RATING:</span> @Model.Rating
+                <span class="fw-bold me-2 text-white">RATING:</span> @Model.Rating
             </div>
         </div>
         <hr />
@@ -55,7 +55,7 @@
 
         <div class="row">
             <div class="col">
-                <span class="h5 fw-bolder ms-4">@Model.Overview</span>
+                <p class="h5 ms-4 text-white-50">@Model.Overview</p>
             </div>
         </div>
     </div>
