--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -15,4 +15,7 @@ html {
 
 body {
   margin-bottom: 60px;
+    background-image: url('/images/bg-dark.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
